src/objects/EventApi__Seat__c.object
<CustomObject>
    <description>Seat for the related section.</description>
    <fields>
        <fullName>EventApi__Is_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related seat is assigned to an attendee.</description>
        <inlineHelpText>When checked, the related seat is assigned to an attendee.</inlineHelpText>
        <label>Is Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Seat_Number__c</fullName>
        <description>An assigned number used for tracking purposes.</description>
        <inlineHelpText>An assigned number used for tracking purposes.</inlineHelpText>
        <label>Seat Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Section__c</fullName>
        <description>**Required** Linked to the related section.</description>
        <inlineHelpText>**Required** Linked to the related section.</inlineHelpText>
        <label>Section</label>
        <referenceTo>EventApi__Section__c</referenceTo>
        <relationshipLabel>Seats</relationshipLabel>
        <relationshipName>Seats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Seat</label>
    <nameField>
        <displayFormat>SEAT-{00000000}</displayFormat>
        <label>Seat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>